# logic-simulation

./: CMakeLists.txt  build.sh
.cache/clangd/index/: and_gate.h.8161B89999620B2F.idx  gate.h.BA679C2699E2DB8B.idx  main.cpp.6A408D1D80C0B69A.idx  not_gate.h.371AE9715ECDC287.idx  or_gate.h.4EB8D1AD98B46AFD.idx  simulator.cpp.4CC76B3A176A3881.idx  simulator.h.04F97B4A01C7A406.idx
src/: and_gate.h  gate.h  main.cpp  not_gate.h  or_gate.h  simulator.cpp  simulator.h
